--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cvuhsd-portal",
   "version": "1.0.0",
   "description": "The CVUHSD portal is a web page with buttons containing sites that are frequently accessed",
-  "prviate": true,
+  "private": true,
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack-dev-server",
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server",
     "prod": "webpack && webpack-dev-server"
   },
   "repository": {
@@ -24,12 +26,17 @@
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "cors-anywhere": "^0.4.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "source-map-support": "^0.5.9",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "fs": "0.0.1-security",
+    "imports-loader": "^0.8.0",
     "net": "^1.0.2"
   },
   "proxy": "http://localhost:3002"
