Update webpack config to get accurate source maps. Modularize code in logic.js; update gitignore to ignore source maps; add new scripts to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ dist-structure.txt
 *.cer
 *.pfx
 
+#ignore source maps & production bundle.js
+*.map
+bundle.js
+
 #Ignore React Build folder, since you can generate this at any time
 build
 /build
