--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ dist
 dist/
 dist/*
 
+#Ignore photoshop files
+*.psd
+
 #Ignore NPM & yarn lock files
 package-lock.json
 yarn.lock
@@ -48,6 +51,9 @@ reagent-reactjs/node_modules
 
 # production
 /build
+
+#ignore environment variables
+.env
 
 # misc
 .DS_Store
