--- a/js/staff-manifest.json
+++ b/js/staff-manifest.json
@@ -15,7 +15,7 @@
     ],
     "start_url": "/staff.html",
     "background_color": "#1e6c93",
-    "display": "standalone", 
+    "display": "fullscreen", 
     "scope": "/",
     "theme_color": "#1e6c93"
   }
