Add template parameter to webpack output config to copy over the staff.html file into the /dist folder

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prod": "webpack --mode production",
     "dev-build": "webpack --mode development",
     "start": "npm run dev-build  && webpack-dev-server",
-    "product": "webpack && webpack-dev-server --inline --hot"
+    "product": "webpack && webpack-dev-server --inline --hot",
+    "dev-server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
