--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.4",
     "cors-anywhere": "^0.4.1",
     "html-loader": "^0.5.5",
+    "html-webpack-include-assets-plugin": "^1.0.6",
     "html-webpack-plugin": "^3.2.0",
     "source-map-support": "^0.5.9",
     "uglifyjs-webpack-plugin": "^2.0.1",
