--- a/package.json
+++ b/package.json
@@ -2,18 +2,7 @@
   "name": "cvuhsd-portal",
   "version": "1.0.0",
   "description": "The CVUHSD portal is a web page with buttons containing sites that are frequently accessed",
-  "private": true,
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "prod": "webpack --mode production",
-    "dev-build": "webpack --mode development",
-    "start": "npm run dev-build  && webpack-dev-server",
-    "product": "webpack && webpack-dev-server --inline --hot",
-    "dev-server": "webpack-dev-server",
-    "dev": "npm run dev-build && npm run dev-server"
-  },
+  "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JuanDavidLopez95/CVUHSD-Portal.git"
@@ -24,25 +13,24 @@
     "url": "https://github.com/JuanDavidLopez95/CVUHSD-Portal/issues"
   },
   "homepage": "https://github.com/JuanDavidLopez95/CVUHSD-Portal#readme",
-  "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
-    "babel-loader": "^8.0.4",
-    "copy-webpack-plugin": "^4.6.0",
-    "cors-anywhere": "^0.4.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-include-assets-plugin": "^1.0.6",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-support": "^0.5.9",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
-  },
   "dependencies": {
-    "fs": "0.0.1-security",
-    "imports-loader": "^0.8.0",
-    "net": "^1.0.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8"
   },
-  "proxy": "http://localhost:3002"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
