--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet-csp": "^2.8.0",
+    "passport": "^0.4.0",
+    "passport-activedirectory": "^1.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
