--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/JuanDavidLopez95/CVUHSD-Portal#readme",
   "dependencies": {
+    "activedirectory": "^0.7.2",
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
