--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet-csp": "^2.8.0",
     "passport": "^0.4.0",
@@ -26,7 +27,9 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "wstrust-client": "0.0.1",
+    "xml2js": "^0.4.22"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +52,5 @@
     "concurrently": "^4.1.1",
     "nodemon": "^1.19.1"
   },
-  "proxy": "http://localhost:7000"
+  "proxy": "http://localhost:3001"
 }
