--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet-csp": "^2.8.0",
     "passport": "^0.4.0",
     "passport-activedirectory": "^1.0.4",
+    "passport-saml": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
