Reconfigure server files. Rename server entry point file to index.js

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "server": "nodemon src/server/server.js --inspect",
+    "server": "nodemon src/server/index.js --inspect",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm start\""
