--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
     "activedirectory": "^0.7.2",
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "helmet-csp": "^2.8.0",
+    "express-session": "^1.17.0",
+    "helmet-csp": "^2.9.4",
     "passport": "^0.4.0",
     "passport-activedirectory": "^1.0.4",
     "passport-saml": "^1.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
+    "passport-wsfed-saml2": "git+https://github.com/auth0/passport-wsfed-saml2.git",
+    "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,8 +52,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "concurrently": "^4.1.1",
-    "nodemon": "^1.19.1"
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.4"
   },
   "proxy": "http://localhost:3001"
 }
