--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ dist-structure.txt
 *.cer
 *.pfx
 src/certificates
+/certificates
+certificates
 
 #ignore source maps & production bundle.js
 *.map
@@ -92,5 +94,3 @@ yarn-error.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/certificates/
-src/certificates/
