--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "homepage": "https://github.com/JuanDavidLopez95/CVUHSD-Portal#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "activedirectory": "^0.7.2",
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
@@ -52,6 +55,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.4"
   },
