--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "request-ip": "^2.1.3",
     "styled-components": "^4.4.0"
   },
   "scripts": {
