--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "request-ip": "^2.1.3",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "undefsafe": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
