Move server/ folder outside of src/ and update all respective paths, such as the server start script.

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,10 @@ certificates/*
 
 #Ignore IIS configs
 *.config
-s
+
+#Ignore static HTML folder file
+static-files/
+
 # misc
 .DS_Store
 .env.local
