--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/JuanDavidLopez95/CVUHSD-Portal/issues"
   },
-  "homepage": "https://github.com/JuanDavidLopez95/CVUHSD-Portal#readme",
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -31,18 +31,19 @@
     "passport-activedirectory": "^1.0.4",
     "passport-saml": "^1.2.0",
     "passport-wsfed-saml2": "git+https://github.com/auth0/passport-wsfed-saml2.git",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "request-ip": "^2.1.3",
-    "styled-components": "^4.4.0",
+    "styled-components": "^4.4.1",
     "undefsafe": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf build/ && react-scripts build",
+    "build-serve": "npm run build && npm serve -s build/",
     "server": "nodemon server/index.js --inspect",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -59,7 +60,7 @@
   ],
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "concurrently": "^4.1.2",
+    "concurrently": "^5.0.0",
     "nodemon": "^1.19.4"
   },
   "proxy": "http://localhost:3001"
