--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "request-ip": "^2.1.3",
