--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "bugs": {
     "url": "https://github.com/JuanDavidLopez95/CVUHSD-Portal/issues"
   },
-    "homepage": "/build",
-    "dependencies": {
+  "homepage": "/build",
+  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
@@ -38,6 +38,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "request-ip": "^2.1.3",
+    "ssl-root-cas": "^1.3.1",
     "styled-components": "^4.4.1",
     "undefsafe": "^2.0.2"
   },
