--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "helmet-csp": "^2.9.4",
+    "helmet": "^3.21.2",
     "isdev": "^1.0.1",
     "passport": "^0.4.0",
     "passport-activedirectory": "^1.0.4",
