--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "greeting": "^1.0.6",
     "helmet": "^3.21.2",
     "isdev": "^1.0.1",
     "passport": "^0.4.0",
