--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "request-ip": "^2.1.3",
     "ssl-root-cas": "^1.3.1",
     "styled-components": "^4.4.1",
-    "undefsafe": "^2.0.2"
+    "undefsafe": "^2.0.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
