--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "react-simple-storage": "^1.4.1",
     "request-ip": "^2.1.3",
     "ssl-root-cas": "^1.3.1",
     "styled-components": "^4.4.1",
