--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
