--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf build/ && react-scripts build",
-    "build-serve": "npm run build && npm serve -s build/",
+    "build-serve": "npm run build && serve -s build/",
     "server": "nodemon server/index.js --inspect",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
