--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true && react-scripts start",
     "build": "rm -rf build/ && react-scripts build",
     "build-serve": "npm run build && serve -s build/",
     "server": "nodemon server/index.js --inspect",
