Add WebEx button among other things

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "greeting": "^1.0.6",
     "helmet": "^3.21.2",
     "isdev": "^1.0.1",
+    "msal": "^1.2.1",
     "passport": "^0.4.0",
     "passport-activedirectory": "^1.0.4",
     "passport-saml": "^1.2.0",
     "passport-wsfed-saml2": "git+https://github.com/auth0/passport-wsfed-saml2.git",
     "rc-tooltip": "^4.0.0-alpha.3",
     "react": "^16.11.0",
+    "react-aad-msal": "^2.3.4",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-loading": "^2.0.3",
