--- a/package.json
+++ b/package.json
@@ -17,27 +17,25 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
-    "activedirectory": "^0.7.2",
     "ad": "^0.3.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "cookie-session": "^1.3.3",
+    "bootstrap": "^4.5.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "greeting": "^1.0.6",
-    "helmet": "^3.21.2",
+    "helmet": "^3.22.0",
     "isdev": "^1.0.1",
-    "msal": "^1.2.1",
-    "rc-tooltip": "^4.0.0-alpha.3",
-    "react": "^16.11.0",
-    "react-aad-msal": "^2.3.4",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
+    "msal": "^1.3.1",
+    "rc-tooltip": "^4.0.3",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
     "react-simple-storage": "^1.4.1",
     "react-tabs": "^3.1.0",
     "request-ip": "^2.1.3",
