--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "msal": "^1.3.1",
     "rc-tooltip": "^4.0.3",
     "react": "^16.13.0",
+    "react-aad-msal": "^2.3.5",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-loading": "^2.0.3",
