--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^16.13.1",
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.1",
+    "react-native-uuid-generator": "^6.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-simple-storage": "^1.4.1",
