--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cvuhsd-portal",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "The CVUHSD portal is a web page with buttons containing sites that are frequently accessed",
   "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JuanDavidLopez95/CVUHSD-Portal.git"
   },
-  "author": "Juan David Lopez Londono",
+  "author": "Juan David Lopez Londoño",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JuanDavidLopez95/CVUHSD-Portal/issues"
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "ad": "^0.3.2",
+    "autoprefixer": "^9.8.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "cookie-session": "^1.4.0",
@@ -59,10 +60,10 @@
     "extends": "react-app"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "defaults",
+    "not IE 11",
+    "not IE_Mob 11",
+    "maintained node versions"
   ],
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
