--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^3.22.0",
     "isdev": "^1.0.1",
     "msal": "^1.2.1",
+    "raf": "^3.4.1",
     "rc-tooltip": "^4.0.3",
     "react": "^16.13.1",
     "react-aad-msal": "^2.3.5",
