--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "greeting": "^1.0.6",
     "helmet": "^3.22.0",
