Install jQuery v3.4.1 as a NPM module and create an SDPChat.js file. Load this file once the <App/> component loads.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "greeting": "^1.0.6",
     "helmet": "^3.23.3",
     "isdev": "^1.0.1",
+    "jquery": "^3.4.1",
     "msal": "^1.2.1",
     "raf": "^3.4.1",
     "rc-tooltip": "^4.0.3",
