--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "helmet": "^3.23.3",
     "isdev": "^1.0.1",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "msal": "^1.2.1",
+    "passport-oauth": "^1.0.0",
     "raf": "^3.4.1",
     "rc-tooltip": "^4.0.3",
     "react": "^16.13.1",
