--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "msal": "^1.2.1",
+    "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
     "raf": "^3.4.1",
     "rc-tooltip": "^4.0.3",
