--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "greeting": "^1.0.6",
     "helmet": "^3.23.3",
