--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cvuhsd-portal",
   "version": "1.5.0",
+  "module": "server/index.js",
   "description": "The CVUHSD portal is a web page with buttons containing sites that are frequently accessed",
   "private": false,
   "repository": {
@@ -58,7 +59,7 @@
     "start-reset": "rm -rf node_modules/ && npm install && npm audit fix && npm install && npm start --reset-cache",
     "build": "rm -rf build/ && react-scripts build",
     "build-serve": "npm run build && serve -s build/",
-    "server": "nodemon esm server/entry.js --inspect",
+    "server": "nodemon esm server/es6-entry.js --inspect",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm start\""
