--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
     "raf": "^3.4.1",
-    "rc-tooltip": "^4.0.3",
+    "rc-tooltip": "^5.0.1",
     "react": "^17.0.1",
     "react-aad-msal": "^2.3.5",
     "react-bootstrap": "^1.4.0",
@@ -42,11 +42,11 @@
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "4.0.0",
     "react-simple-storage": "^1.4.1",
     "request-ip": "^2.1.3",
     "ssl-root-cas": "^1.3.1",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.2.1",
     "undefsafe": "^2.0.2",
     "uuid": "^8.3.1"
   },
