--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rc-tooltip": "^5.0.1",
     "react": "^17.0.1",
     "react-aad-msal": "^2.3.5",
+    "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
