--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "./build",
   "dependencies": {
+    "@braintree/browser-detection": "^1.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
