--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-simple-storage": "^1.4.1",
+    "react-toastify": "^6.0.9",
     "request-ip": "^2.1.3",
     "ssl-root-cas": "^1.3.1",
     "styled-components": "^5.2.1",
