--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^2.1.1",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
