--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "es6-promise": "^4.2.8",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "greeting": "^1.0.6",
     "helmet": "^4.1.1",
     "isdev": "^1.0.1",
