Change favicon icons.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "Centinela Valley Union High School District Portal",
   "icons": [
     {
-      "src": "images/favicon.ico",
+      "src": "images/icons/wp-portal-logo-red-white-interior.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#B41A1F",
   "background_color": "#ffffff"
 }
