--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-oauth": "^1.0.0",
     "raf": "^3.4.1",
@@ -61,7 +62,7 @@
     "uuid": "^8.3.1"
   },
   "scripts": {
-    "start": "set HTTPS=true && react-scripts start",
+    "start": "set HTTPS=true && cross-env react-scripts start",
     "start-reset": "rm -rf node_modules/ && npm install && npm audit fix && npm install && npm start --reset-cache",
     "build": "rm -rf build/ && react-scripts build",
     "build-serve": "npm run build && serve -s build/",
@@ -82,6 +83,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "concurrently": "^5.2.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
     "react-refresh": "^0.9.0"
   },
