Add back the digital library resources section to the student portal. Differentiate it with the staff one by removing the follet destiny button.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/JuanDavidLopez95/CVUHSD-Portal/issues"
   },
-  "homepage": "/build",
+  "homepage": ".",
   "dependencies": {
     "@braintree/browser-detection": "^1.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
